# dbb-app

./: .gitignore  .gitmodules  .travis  .travis.yml  LICENSE  Makefile.am  README.md  configure.ac  release-notes.md
build-aux/m4/: bitcoin_qt.m4  libevent.m4
debian/: changelog  control  copyright  dbb-app.install  rules
depends/: README.md
depends/patches/curl/: darwinssl.patch
depends/patches/hidapi/: reportsize.patch
depends/patches/qt/: mac-qmake.conf
depends/patches/qt_mm/: mac-qmake.conf
include/: dbb.h  univalue.h
mac/: README.md  background.psd  background.tiff  fancy.plist  macdeployqtplus
mac/appfolder/Contents/: Info.plist  Info.plist.in
mac/appfolder/Contents/Resources/: icon.icns
src/: Makefile.am  base64.cpp  crypto.cpp  crypto.h  dbb_app.cpp  dbb_app.h  dbb_ca.cpp  dbb_ca.h  dbb_cli.cpp  dbb_comserver.cpp  dbb_comserver.h  dbb_configdata.h  dbb_daemon.cpp  dbb_firmware.cpp  dbb_netthread.cpp  dbb_netthread.h  dbb_util.cpp  dbb_util.h  dbb_wallet.cpp  dbb_wallet.h  firmware.h  util.cpp  util.h
src/bitpaywalletclient/: bpwalletclient.cpp  bpwalletclient.h
src/libbitpay-wallet-client/: bpwalletclient.cpp  bpwalletclient.h
src/libbtc/include/btc/: hash.h
src/libbtc/src/: base58.c  ecc_libsecp256k1.c  sha2.c
src/libdbb/: base64.cpp  crypto.cpp  crypto.h  dbb.cpp  dbb.h
src/qt/: backupdialog.cpp  backupdialog.h  bonjourserviceregister.cpp  clickablelabel.cpp  clickablelabel.h  daemon.qrc  daemongui.cpp  daemongui.h  dbb_gui.cpp  dbb_gui.h  dbb_websocketserver.cpp  dbb_websocketserver.h  dbbgui.cpp  dbbgui.h  dbbgui.qrc  getaddressdialog.cpp  getaddressdialog.h  moc_daemongui.cpp  modalview.cpp  modalview.h  paymentproposal.cpp  paymentproposal.h  qrc_daemon.cpp  qrcodescanner.cpp  qrcodescanner.h  qrcodesequence.cpp  qrcodesequence.h  seeddialog.cpp  seeddialog.h  settingsdialog.cpp  settingsdialog.h  signconfirmationdialog.cpp  signconfirmationdialog.h  update.cpp  update.h  verificationdialog.cpp  verificationdialog.h
src/qt/res/: dbb-app-res.rc  touchhelp_initdone.psd
src/qt/res/icon/: dbb.iconsproj
src/qt/res/theme/src/: window_background.psd
src/qt/ui/: backupdialog.ui  daemon.ui  getaddressdialog.ui  modalview.ui  overview.ui  paymentproposal.ui  qrcodesequence.ui  seeddialog.ui  settingsdialog.ui  signconfirmationdialog.ui  transactiondialog.ui  ui_daemon.h  verificationdialog.ui
src/univalue/: Makefile.am  gen.cpp  univalue.cpp  univalue_read.cpp  univalue_write.cpp
win/: setup.nsi.in
